change the web title icon

--- a/about-us.html
+++ b/about-us.html
@@ -12,7 +12,7 @@
     <title>Original - Lifestyle Blog Template</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <link rel="icon" href="img/core-img/ico_ep1_04_Ryō.ico">
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="style.css">
