--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>Original - Lifestyle Blog Template</title>
+    <title>YingJoy - Blog</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/ico_ep1_04_Ryō.ico">
@@ -97,12 +97,7 @@
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
                     <!-- Classy Menu -->
-                    <nav class="classy-navbar justify-content-between">
-
-                        <!-- Subscribe btn -->
-                        <div class="subscribe-btn">
-                            <a href="#" class="btn subscribe-btn" data-toggle="modal" data-target="#subsModal">Subscribe</a>
-                        </div>
+                    <nav class="classy-navbar justify-content-center">
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
@@ -213,9 +208,11 @@
     <!-- ##### Header Area End ##### -->
 
     <!-- ##### Google Map ##### -->
-    <div class="map-area">
-        <div id="googleMap" class="googleMap"></div>
-    </div>
+    <!-- API need payment -->
+    <!-- <div class="map-area">
+        <div id="googleMap" class="googleMap"></div> 
+    </div> -->
+    
 
     <!-- ##### Contact Area Start ##### -->
     <section class="contact-area section-padding-100">
@@ -267,7 +264,7 @@
                         </form>
                     </div>
                 </div>
-
+                
                 <div class="col-12 col-md-10 col-lg-3">
                     <div class="post-sidebar-area">
 
